--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,5 +14,11 @@
 </ul>
 <div *ngIf="selection">
   <p>Your city is {{ selection }}</p>
-  <button (click)="onClear()">Clear</button>
+  <!-- <button (click)="onClear()">Clear</button> -->
+  <app-button
+    (click)="onClear()"
+    [color]="'blue'"
+    [label]="'Clear'"
+    [selection]="'selection'"
+  />
 </div>
