--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,24 +1,29 @@
-<!-- <P>{{title}}</P>
-<img src="{{url}}"> -->
+<div class="container">
+  <div class="row">
+    <div class="col-md-12 my-3">
+      <app-form-new-item
+        (newItemEvent)="addNewCity($event)"
+        [label]="'City'"
+        [className]="'btn-info'"
+      ></app-form-new-item>
+    </div>
+    <div class="col-md-8">
+      <ul>
+        <li
+          *ngFor="let city of cities"
+          (click)="onCityClicked(city)"
+          [ngClass]="{ 'alert alert-info': city === selection }"
+        >
+          {{ city }}
+        </li>
+      </ul>
+    </div>
+    <div class="col-md-4">
+      <div *ngIf="selection">
+        <p>Your city is {{ selection }}</p>
 
-<p *ngIf="name">El nombre es: {{ name }}</p>
-<input type="text" [(ngModel)]="name" />
-
-<ul *ngFor="let city of cities">
-  <li
-    (click)="onCityClicked(city)"
-    [ngClass]="{ selected: city === selection }"
-  >
-    {{ city }}
-  </li>
-</ul>
-<div *ngIf="selection">
-  <p>Your city is {{ selection }}</p>
-  <!-- <button (click)="onClear()">Clear</button> -->
-  <app-button
-    (click)="onClear()"
-    [color]="'blue'"
-    [label]="'Clear'"
-    [selection]="'selection'"
-  />
+        <app-button (click)="onClear()" [color]="'blue'" [label]="'Clear'" />
+      </div>
+    </div>
+  </div>
 </div>
