--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,13 +9,12 @@
     </div>
     <div class="col-md-8">
       <ul>
-        <li
+        <app-cities
           *ngFor="let city of cities"
-          (click)="onCityClicked(city)"
-          [ngClass]="{ 'alert alert-info': city === selection }"
-        >
-          {{ city }}
-        </li>
+          (click)="onCityClicked($event)"
+          [city]="'city'"
+          [selection]="selection"
+        ></app-cities>
       </ul>
     </div>
     <div class="col-md-4">
