--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -39,9 +39,11 @@
 <hr />
 <div class="container">
   <div class="row">
-    <div class="col-9">
-      <app-contact></app-contact>
+    <div class="col-6">
+      <!-- <app-contact></app-contact> -->
     </div>
-    <div class="col-3">Data</div>
+    <div class="col-6">
+      <app-contact-reactive></app-contact-reactive>
+    </div>
   </div>
 </div>
